--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>HTML Sample</h1>
-        <img width="400px" src="img/img1.jpg" alt="nature">
+      <h1>HTML Sample</h1>
+      <img width="400px" src="img/img1.jpg" alt="nature" />
+      <p>Hello world!</p>
     </header>
-</body>
+  </body>
 </html>
