Added a new feature-a

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
       <img width="400px" src="img/img1.jpg" alt="nature" />
       <p>Hello world!</p>
     </header>
+    <main>
+        <p>Here should be a new feature</p>
+    </main>
   </body>
 </html>
